[tool.poetry]
name = "expdb"
version = "0.1.0"
description = "An experiment database for dataset tracking and data l"
authors = ["Carson McNeil <carson.mcneil@gmail.com>"]
readme = "README.md"
packages = [{include = "expdb"}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "*"
psycopg2 = "*"
alembic = "*"
Flask = "*"
Flask-Admin = "*"
#Flask-Bootstrap = "*"
Flask-SQLAlchemy = "*"
Flask-Wtf = "*"
google-cloud-storage = "*"
pandas = "*"
pydub = "*"
pytype = "*"
pytest = "*"
mne = "*"
numpy = "*"
opencv-python = "*"
wtforms = "*"
wtforms-sqlalchemy = "*"

[tool.pytype]
inputs = ['expdb']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
